--- a/skos-ap-eu/doc/skos-ap-eu.ditamap
+++ b/skos-ap-eu/doc/skos-ap-eu.ditamap
@@ -8,12 +8,16 @@
   <topicmeta>
     <author>Eugeniu Costetchi</author>
 
+    <author>Jean Delahousse</author>
+
     <publisher>Publications Office of the European Union</publisher>
 
     <critdates>
       <created date="10/09/2019"/>
 
       <revised modified="13/09/2019"/>
+
+      <revised modified="27/08/2019"/>
     </critdates>
 
     <prodinfo>
