--- a/skos-ap-eu/doc/skos-ap-eu.dita
+++ b/skos-ap-eu/doc/skos-ap-eu.dita
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?><!DOCTYPE reference PUBLIC "-//OASIS//DTD DITA Reference//EN" "technicalContent/dtd/reference.dtd">
-<reference id="EA_Model15x26x22x02x00" xml:lang="en">
+<reference id="EA_Model15x41x57x02x00" xml:lang="en">
 	<title>Application profile</title>
 	<refbody>
 		<section>
@@ -72,16 +72,10 @@
 							</entry>
 						</row>
 						<row rowsep="1">
-							<entry colname="1">dct:​type</entry>
+							<entry colname="1">dct:type</entry>
 							<entry colname="2">skos:​Concept</entry>
 							<entry colname="3">1..1</entry>
 							<entry colname="4">Specify the context where a specified notation is considered unique. </entry>
-						</row>
-						<row rowsep="1">
-							<entry colname="1">skos:​notation</entry>
-							<entry colname="2">euvoc:​XlNotation</entry>
-							<entry colname="3">0..*</entry>
-							<entry colname="4">A notation is a string of characters such as "T58.5" or "303.4833" used to uniquely identify a concept within the scope of a given concept scheme or within a specified context.</entry>
 						</row>
 					</tbody>
 				</tgroup>
@@ -139,42 +133,6 @@
 								<p>The literal form of the note.</p>
 							</entry>
 						</row>
-						<row rowsep="1">
-							<entry colname="1">euvoc:​xlDefinition</entry>
-							<entry colname="2">euvoc:​XlNote</entry>
-							<entry colname="3">0..*</entry>
-							<entry colname="4">A statement or formal explanation of the meaning of a concept.</entry>
-						</row>
-						<row rowsep="1">
-							<entry colname="1">euvoc:​xlHistoryNote</entry>
-							<entry colname="2">euvoc:​XlNote</entry>
-							<entry colname="3">0..*</entry>
-							<entry colname="4">A note about the past state/use/meaning of a concept.</entry>
-						</row>
-						<row rowsep="1">
-							<entry colname="1">euvoc:​xlExample</entry>
-							<entry colname="2">euvoc:​XlNote</entry>
-							<entry colname="3">0..*</entry>
-							<entry colname="4">An example of the use of a concept.</entry>
-						</row>
-						<row rowsep="1">
-							<entry colname="1">euvoc:​xlChangeNote</entry>
-							<entry colname="2">euvoc:​XlNote</entry>
-							<entry colname="3">0..*</entry>
-							<entry colname="4">A note about a modification to a concept.</entry>
-						</row>
-						<row rowsep="1">
-							<entry colname="1">euvoc:​xlEditorialNote</entry>
-							<entry colname="2">euvoc:​XlNote</entry>
-							<entry colname="3">0..*</entry>
-							<entry colname="4">A note for an editor, translator or maintainer of the vocabulary.</entry>
-						</row>
-						<row rowsep="1">
-							<entry colname="1">euvoc:​xlScopeNote</entry>
-							<entry colname="2">euvoc:​XlNote</entry>
-							<entry colname="3">0..*</entry>
-							<entry colname="4">A note that helps to clarify the meaning of a concept.</entry>
-						</row>
 					</tbody>
 				</tgroup>
 			</table>
@@ -224,19 +182,19 @@
 							<entry colname="4"/>
 						</row>
 						<row rowsep="1">
-							<entry colname="1">skos:​member</entry>
+							<entry colname="1">skos:member</entry>
 							<entry colname="2">skos:​Collection</entry>
 							<entry colname="3">0..*</entry>
 							<entry colname="4">Collection has member.</entry>
 						</row>
 						<row rowsep="1">
-							<entry colname="1">skos:​member</entry>
+							<entry colname="1">skos:member</entry>
 							<entry colname="2">skos:​Concept</entry>
 							<entry colname="3">0..*</entry>
 							<entry colname="4">Collection has member.</entry>
 						</row>
 						<row rowsep="1">
-							<entry colname="1">skosxl:​prefLabel</entry>
+							<entry colname="1">skosxl:prefLabel</entry>
 							<entry colname="2">skosxl:​Label</entry>
 							<entry colname="3">1..*</entry>
 							<entry colname="4">The preferred lexical label for a resource, in a given language. No two concepts in the same concept scheme may have the same preferred label in a given language. </entry>
@@ -420,57 +378,75 @@
 							</entry>
 						</row>
 						<row rowsep="1">
-							<entry colname="1">skos:​inScheme</entry>
+							<entry colname="1">skos:inScheme</entry>
 							<entry colname="2">skos:​ConceptScheme</entry>
 							<entry colname="3">1..*</entry>
 							<entry colname="4">A concept scheme in which the concept is included. A concept may be a member of more than one concept scheme.</entry>
 						</row>
 						<row rowsep="1">
-							<entry colname="1">skos:​broadMatch</entry>
+							<entry colname="1">euvoc:xlDefinition</entry>
+							<entry colname="2">euvoc:​XlNote</entry>
+							<entry colname="3">0..*</entry>
+							<entry colname="4">A statement or formal explanation of the meaning of a concept.</entry>
+						</row>
+						<row rowsep="1">
+							<entry colname="1">skos:broadMatch</entry>
 							<entry colname="2">skos:​Concept</entry>
 							<entry colname="3">0..*</entry>
 							<entry colname="4">The properties skos:broadMatch and skos:narrowMatch are used to state a hierarchical mapping link between two concepts.</entry>
 						</row>
 						<row rowsep="1">
-							<entry colname="1">skos:​narrowMatch</entry>
+							<entry colname="1">euvoc:xlHistoryNote</entry>
+							<entry colname="2">euvoc:​XlNote</entry>
+							<entry colname="3">0..*</entry>
+							<entry colname="4">A note about the past state/use/meaning of a concept.</entry>
+						</row>
+						<row rowsep="1">
+							<entry colname="1">skos:narrowMatch</entry>
 							<entry colname="2">skos:​Concept</entry>
 							<entry colname="3">0..*</entry>
 							<entry colname="4">The properties skos:broadMatch and skos:narrowMatch are used to state a hierarchical mapping link between two concepts.</entry>
 						</row>
 						<row rowsep="1">
-							<entry colname="1">skos:​broader</entry>
+							<entry colname="1">skos:broader</entry>
 							<entry colname="2">skos:​Concept</entry>
 							<entry colname="3">0..*</entry>
 							<entry colname="4">A concept that is more general in meaning.
 Broader concepts are typically rendered as parents in a concept hierarchy (tree).</entry>
 						</row>
 						<row rowsep="1">
-							<entry colname="1">dct:​isReplacedBy</entry>
+							<entry colname="1">euvoc:xlExample</entry>
+							<entry colname="2">euvoc:​XlNote</entry>
+							<entry colname="3">0..*</entry>
+							<entry colname="4">An example of the use of a concept.</entry>
+						</row>
+						<row rowsep="1">
+							<entry colname="1">dct:isReplacedBy</entry>
 							<entry colname="2">skos:​Concept</entry>
 							<entry colname="3">0..*</entry>
 							<entry colname="4">A related resource that supplants, displaces, or supersedes the described resource. 
 </entry>
 						</row>
 						<row rowsep="1">
-							<entry colname="1">skos:​exactMatch</entry>
+							<entry colname="1">skos:exactMatch</entry>
 							<entry colname="2">skos:​Concept</entry>
 							<entry colname="3">0..*</entry>
 							<entry colname="4">The property skos:exactMatch is used to link two concepts, indicating a high degree of confidence that the concepts can be used interchangeably across a wide range of information retrieval applications.</entry>
 						</row>
 						<row rowsep="1">
-							<entry colname="1">skos:​closeMatch</entry>
+							<entry colname="1">skos:closeMatch</entry>
 							<entry colname="2">skos:​Concept</entry>
 							<entry colname="3">0..*</entry>
 							<entry colname="4">The property skos:closeMatch is used to link two concepts that are sufficiently similar that they can be used interchangeably in some information retrieval applications.</entry>
 						</row>
 						<row rowsep="1">
-							<entry colname="1">skos:​relatedMatch</entry>
+							<entry colname="1">skos:relatedMatch</entry>
 							<entry colname="2">skos:​Concept</entry>
 							<entry colname="3">0..*</entry>
 							<entry colname="4">The property skos:relatedMatch is used to state an associative mapping link between two concepts.</entry>
 						</row>
 						<row rowsep="1">
-							<entry colname="1">skos:​narrower</entry>
+							<entry colname="1">skos:narrower</entry>
 							<entry colname="2">skos:​Concept</entry>
 							<entry colname="3">0..*</entry>
 							<entry colname="4">A concept that is less general in meaning.
@@ -478,55 +454,65 @@ Narrower concepts are typically rendered as children in a concept hierarchy (tre
 </entry>
 						</row>
 						<row rowsep="1">
-							<entry colname="1">skosxl:​altLabel</entry>
+							<entry colname="1">skosxl:altLabel</entry>
 							<entry colname="2">skosxl:​Label</entry>
 							<entry colname="3">0..*</entry>
 							<entry colname="4">An alternative lexical label for a resource. Acronyms, abbreviations, spelling variants, and irregular plural/singular forms may be included among the alternative labels for a concept. </entry>
 						</row>
 						<row rowsep="1">
-							<entry colname="1">skosxl:​hiddenLabel</entry>
+							<entry colname="1">skosxl:hiddenLabel</entry>
 							<entry colname="2">skosxl:​Label</entry>
 							<entry colname="3">0..*</entry>
 							<entry colname="4">A lexical label for a resource that should be hidden when generating visual displays of the resource, but should still be accessible to free text search operations. Mis-spelled terms are normally included as hidden labels.</entry>
 						</row>
 						<row rowsep="1">
-							<entry colname="1">skos:​topConceptOf</entry>
+							<entry colname="1">skos:topConceptOf</entry>
 							<entry colname="2">skos:​ConceptScheme</entry>
 							<entry colname="3">0..*</entry>
 							<entry colname="4">The property skos:hasTopConcept is, by convention, used to link a concept scheme to the SKOS concept(s) which are topmost in the hierarchical relations for that scheme.</entry>
 						</row>
 						<row rowsep="1">
-							<entry colname="1">skosxl:​prefLabel</entry>
+							<entry colname="1">skosxl:prefLabel</entry>
 							<entry colname="2">skosxl:​Label</entry>
 							<entry colname="3">1..*</entry>
 							<entry colname="4">The preferred lexical label for a resource, in a given language. No two concepts in the same concept scheme may have the same preferred label in a given language. 
 </entry>
 						</row>
 						<row rowsep="1">
-							<entry colname="1">dct:​replaces</entry>
+							<entry colname="1">skos:notation</entry>
+							<entry colname="2">euvoc:​XlNotation</entry>
+							<entry colname="3">0..*</entry>
+							<entry colname="4">A notation is a string of characters such as "T58.5" or "303.4833" used to uniquely identify a concept within the scope of a given concept scheme or within a specified context.</entry>
+						</row>
+						<row rowsep="1">
+							<entry colname="1">dct:replaces</entry>
 							<entry colname="2">skos:​Concept</entry>
 							<entry colname="3">0..*</entry>
 							<entry colname="4">A related resource that is supplanted, displaced, or superseded by the described resource.</entry>
 						</row>
 						<row rowsep="1">
-							<entry colname="1">skos:​related</entry>
+							<entry colname="1">skos:related</entry>
 							<entry colname="2">skos:​Concept</entry>
 							<entry colname="3">0..*</entry>
 							<entry colname="4">A concept with which there is an associative semantic relationship.</entry>
 						</row>
 						<row rowsep="1">
-							<entry colname="1">euvoc:​domain</entry>
-							<entry colname="2">skos:​Concept</entry>
-							<entry colname="3">0..1</entry>
-							<entry colname="4">Indicates the subject of the controlled vocabulary. 
-This property has a similar function as the dct:subject and dcat:theme. </entry>
+							<entry colname="1">euvoc:xlChangeNote</entry>
+							<entry colname="2">euvoc:​XlNote</entry>
+							<entry colname="3">0..*</entry>
+							<entry colname="4">A note about a modification to a concept.</entry>
 						</row>
 						<row rowsep="1">
-							<entry colname="1">dct:​type</entry>
-							<entry colname="2">skos:​Concept</entry>
-							<entry colname="3">0..1</entry>
-							<entry colname="4">Specify the context where a specified notation is considered unique. 
-</entry>
+							<entry colname="1">euvoc:xlEditorialNote</entry>
+							<entry colname="2">euvoc:​XlNote</entry>
+							<entry colname="3">0..*</entry>
+							<entry colname="4">A note for an editor, translator or maintainer of the vocabulary.</entry>
+						</row>
+						<row rowsep="1">
+							<entry colname="1">euvoc:xlScopeNote</entry>
+							<entry colname="2">euvoc:​XlNote</entry>
+							<entry colname="3">0..*</entry>
+							<entry colname="4">A note that helps to clarify the meaning of a concept.</entry>
 						</row>
 					</tbody>
 				</tgroup>
@@ -602,19 +588,26 @@ This property has a similar function as the dct:subject and dcat:theme. </entry>
 							</entry>
 						</row>
 						<row rowsep="1">
-							<entry colname="1">dct:​hasPart</entry>
+							<entry colname="1">dct:hasPart</entry>
 							<entry colname="2">skos:​ConceptScheme</entry>
 							<entry colname="3">0..*</entry>
 							<entry colname="4">A related resource that is included either physically or logically in the described resource.</entry>
 						</row>
 						<row rowsep="1">
-							<entry colname="1">dct:​isPartOf</entry>
+							<entry colname="1">euvoc:domain</entry>
+							<entry colname="2">skos:​Concept</entry>
+							<entry colname="3">0..1</entry>
+							<entry colname="4">Indicates the subject of the controlled vocabulary. 
+This property has a similar function as the dct:subject and dcat:theme. </entry>
+						</row>
+						<row rowsep="1">
+							<entry colname="1">dct:isPartOf</entry>
 							<entry colname="2">skos:​ConceptScheme</entry>
 							<entry colname="3">0..*</entry>
 							<entry colname="4">A related resource in which the described resource is physically or logically included.</entry>
 						</row>
 						<row rowsep="1">
-							<entry colname="1">skosxl:​prefLabel</entry>
+							<entry colname="1">skosxl:prefLabel</entry>
 							<entry colname="2">skosxl:​Label</entry>
 							<entry colname="3">1..*</entry>
 							<entry colname="4">The preferred lexical label for a resource, in a given language. No two concepts in the same concept scheme may have the same preferred label in a given language. </entry>
@@ -748,6 +741,13 @@ This property has a similar function as the dct:subject and dcat:theme. </entry>
 							<entry colname="4">
 								<p>The literal form of an skosxl:Label.  An instance of the class skosxl:Label has one and only one literal form. </p>
 							</entry>
+						</row>
+						<row rowsep="1">
+							<entry colname="1">dct:type</entry>
+							<entry colname="2">skos:​Concept</entry>
+							<entry colname="3">0..1</entry>
+							<entry colname="4">Specify the context where a specified notation is considered unique. 
+</entry>
 						</row>
 					</tbody>
 				</tgroup>
