--- a/skos-ap-eu/doc/skos-ap-eu.dita
+++ b/skos-ap-eu/doc/skos-ap-eu.dita
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?><!DOCTYPE reference PUBLIC "-//OASIS//DTD DITA Reference//EN" "technicalContent/dtd/reference.dtd">
-<reference id="EA_Model15x41x57x02x00" xml:lang="en">
+<reference id="EA_Model17x28x34x01x00" xml:lang="en">
 	<title>Application profile</title>
 	<refbody>
 		<section>
@@ -55,12 +55,10 @@
 							</entry>
 						</row>
 						<row rowsep="1">
-							<entry colname="1">euvoc:​xlCodification</entry>
-							<entry colname="2">rdfs:​Literal</entry>
-							<entry colname="3">1..1</entry>
-							<entry colname="4">
-								<p>The literal form of the notation. </p>
-							</entry>
+							<entry colname="1">euvoc:​status</entry>
+							<entry colname="2">rdfs:​Resource</entry>
+							<entry colname="3">0..1</entry>
+							<entry colname="4"/>
 						</row>
 						<row rowsep="1">
 							<entry colname="1">owl:​deprecated</entry>
@@ -69,6 +67,14 @@
 							<entry colname="4">
 								<p>States whether the resource is current or deprecated. By deprecating a resource, it means that it should not be used in new documents.</p>
 								<p>Deprecation is a feature commonly used in versioning software to indicate that a particular feature is preserved for backward-compatibility purposes, but may be phased out in the future. </p>
+							</entry>
+						</row>
+						<row rowsep="1">
+							<entry colname="1">rdf:​value</entry>
+							<entry colname="2">rdfs:​Literal</entry>
+							<entry colname="3">1..1</entry>
+							<entry colname="4">
+								<p>The literal form of the notation. </p>
 							</entry>
 						</row>
 						<row rowsep="1">
@@ -126,7 +132,7 @@
 							</entry>
 						</row>
 						<row rowsep="1">
-							<entry colname="1">euvoc:​xlNote</entry>
+							<entry colname="1">rdf:​value</entry>
 							<entry colname="2">rdfs:​Literal</entry>
 							<entry colname="3">1..1</entry>
 							<entry colname="4">
@@ -273,12 +279,10 @@
 							</entry>
 						</row>
 						<row rowsep="1">
-							<entry colname="1">lemon:​context</entry>
+							<entry colname="1">euvoc:​status</entry>
 							<entry colname="2">rdfs:​Resource</entry>
-							<entry colname="3">0..*</entry>
-							<entry colname="4">
-								<p>Denotes the pragmatic, discursive or technical context of a concept or a constraint on the concept properties.</p>
-							</entry>
+							<entry colname="3">0..1</entry>
+							<entry colname="4"/>
 						</row>
 						<row rowsep="1">
 							<entry colname="1">owl:​deprecated</entry>
@@ -396,6 +400,12 @@
 							<entry colname="4">The properties skos:broadMatch and skos:narrowMatch are used to state a hierarchical mapping link between two concepts.</entry>
 						</row>
 						<row rowsep="1">
+							<entry colname="1">euvoc:context</entry>
+							<entry colname="2">skos:​Concept</entry>
+							<entry colname="3">0..*</entry>
+							<entry colname="4"/>
+						</row>
+						<row rowsep="1">
 							<entry colname="1">euvoc:xlHistoryNote</entry>
 							<entry colname="2">euvoc:​XlNote</entry>
 							<entry colname="3">0..*</entry>
@@ -479,7 +489,7 @@ Narrower concepts are typically rendered as children in a concept hierarchy (tre
 </entry>
 						</row>
 						<row rowsep="1">
-							<entry colname="1">skos:notation</entry>
+							<entry colname="1">euvoc:xlNotation</entry>
 							<entry colname="2">euvoc:​XlNotation</entry>
 							<entry colname="3">0..*</entry>
 							<entry colname="4">A notation is a string of characters such as "T58.5" or "303.4833" used to uniquely identify a concept within the scope of a given concept scheme or within a specified context.</entry>
@@ -607,6 +617,12 @@ This property has a similar function as the dct:subject and dcat:theme. </entry>
 							<entry colname="4">A related resource in which the described resource is physically or logically included.</entry>
 						</row>
 						<row rowsep="1">
+							<entry colname="1">skos:hasTopConcept</entry>
+							<entry colname="2">skos:​Concept</entry>
+							<entry colname="3">0..*</entry>
+							<entry colname="4"/>
+						</row>
+						<row rowsep="1">
 							<entry colname="1">skosxl:prefLabel</entry>
 							<entry colname="2">skosxl:​Label</entry>
 							<entry colname="3">1..*</entry>
@@ -679,7 +695,7 @@ This property has a similar function as the dct:subject and dcat:theme. </entry>
 						<row rowsep="1">
 							<entry colname="1">euvoc:​status</entry>
 							<entry colname="2">rdfs:​Resource</entry>
-							<entry colname="3">1..1</entry>
+							<entry colname="3">0..1</entry>
 							<entry colname="4">
 								<p>Indicates the status of a resource in the process of asset management.</p>
 							</entry>
